rke2/alertmanager/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitower
spec:
  selector:
    app: alertmanager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9093
  type: ClusterIP
