rke2/alertmanager/alertmonitor-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-telegram-bot
  namespace: monitower
labels:
  app: alertmanager-telegram-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager-telegram-bot
  template:
    metadata:
      labels:
        app: alertmanager-telegram-bot
    spec:
      containers:
      - name: alertmanager-telegram-bot
        image: metalmatze/alertmanager-bot:0.4.3
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-telegram-bot
  namespace: monitower
spec:
  selector:
    app: alertmanager-telegram-bot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
